@@ -94,6 +94,7 @@ groff_TESTS = \
   src/roff/groff/tests/hys-request-works.sh \
   src/roff/groff/tests/initialization-is-quiet.sh \
   src/roff/groff/tests/latin1-device-maps-oq-to-0x27.sh \
+  src/roff/groff/tests/lbp-device-smoke-test.sh \
   src/roff/groff/tests/lf-request-works.sh \
   src/roff/groff/tests/logical-predicates-work.sh \
   src/roff/groff/tests/localization-works.sh \
