@@ -1,5 +1,10 @@
 2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/roff/groff/tests/lbp-device-smoke-test.sh: New file.
+	* src/roff/groff/groff.am (groff_TESTS): Run test.
+
+2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/roff/groff/tests/safer-mode-works.sh: Fix newly added test
 	to actually test what it means to test.  Continues commit
 	49cbc926cf, 15 December.
